--- a/LegendreBasisMatrix/.gitattributes
+++ b/LegendreBasisMatrix/.gitattributes
@@ -1,2 +1,1 @@
-*.mat filter=lfs diff=lfs merge=lfs -text
-*.fig filter=lfs diff=lfs merge=lfs -text
+LegendreFunctions.mat filter=lfs diff=lfs merge=lfs -text
